Update 웹 UI 프레임워크 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -170,3 +170,26 @@ onInit() {
 - 각 아이템 접근: `/과일들/0/이름`, `/과일들/0/가격`
 - 특징: 반복 UI 요소 자동 생성 가능 (ex. 테이블 row)
 </br>
+
+### Table Aggregation Binding 예제
+- `items="{모델명>/경로}"` → 배열 전체를 바인딩 (반복 구조 생성됨)
+- Column은 데이터 표시용이 아니라 구조(제목) 정의용
+- 셀 안의 바인딩은 상대경로({모델명>필드명}) → 이미 상위 items가 배열을 잡고 있기 때문
+```html
+<Table items="{local>/persons}">
+    <columns>
+        <Column><Text text="Name"/></Column>
+        <Column><Text text="Age"/></Column>
+        <Column><Text text="Tel"/></Column>
+    </columns>
+    <items>
+        <ColumnListItem>
+            <cells>
+                <Text text="{local>name}" />
+                <Input value="{local>age}" />
+                <Text text="{local>tel}" />
+            </cells>
+        </ColumnListItem>
+    </items>
+</Table>
+```
