Update 웹 UI 프레임워크 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -171,7 +171,8 @@ onInit() {
 - 특징: 반복 UI 요소 자동 생성 가능 (ex. 테이블 row)
 </br>
 
-### Table Aggregation Binding 예제
+### Table Aggregation Binding (sap.m.Table) 예제 
+- `sap.m.Table`은 `items`
 - `items="{모델명>/경로}"` → 배열 전체를 바인딩 (반복 구조 생성됨)
 - Column은 데이터 표시용이 아니라 구조(제목) 정의용
 - 셀 안의 바인딩은 상대경로({모델명>필드명}) → 이미 상위 items가 배열을 잡고 있기 때문
@@ -192,4 +193,39 @@ onInit() {
         </ColumnListItem>
     </items>
 </Table>
+```
+</br>
+
+### ### Table Aggregation Binding (sap.ui.table.Table) 예제 
+- `sap.ui.table.Table`은 `rows`
+- `rows="{모델명>/경로}"` → 배열 전체를 바인딩 (반복 구조 생성됨)
+- `<t:Column>`은 데이터 표시용이 아니라 구조(제목) 정의용
+- `<t:template>` 안의 바인딩은 상대경로 (`{모델명>필드명}`) → 이미 상위 `rows`가 배열을 잡고 있기 때문
+```html
+<t:Table rows="{local>/persons}">
+    <t:columns>
+
+        <t:Column>
+            <Label text="Name" />
+            <t:template>
+                <Text text="{local>name}" />
+            </t:template>
+        </t:Column>
+
+        <t:Column>
+            <Label text="Age" />
+            <t:template>
+                <Text text="{local>age}" />
+            </t:template>
+        </t:Column>
+
+        <t:Column>
+            <Label text="Tel" />
+            <t:template>
+                <Text text="{local>tel}" />
+            </t:template>
+        </t:Column>
+
+    </t:columns>
+</t:Table>
 ```
