Update 웹 UI 프레임워크 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -170,6 +170,7 @@ onInit() {
 - 각 아이템 접근: `/과일들/0/이름`, `/과일들/0/가격`
 - 특징: 반복 UI 요소 자동 생성 가능 (ex. 테이블 row)
 </br>
+</br>
 
 ### Table Aggregation Binding (sap.m.Table) 예제 
 - `sap.m.Table`은 `items`
@@ -196,7 +197,7 @@ onInit() {
 ```
 </br>
 
-### ### Table Aggregation Binding (sap.ui.table.Table) 예제 
+### Table Aggregation Binding (sap.ui.table.Table) 예제 
 - `sap.ui.table.Table`은 `rows`
 - `rows="{모델명>/경로}"` → 배열 전체를 바인딩 (반복 구조 생성됨)
 - `<t:Column>`은 데이터 표시용이 아니라 구조(제목) 정의용
