Update 웹 UI 프레임워크 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -177,6 +177,34 @@ onInit() {
 - `items="{모델명>/경로}"` → 배열 전체를 바인딩 (반복 구조 생성됨)
 - Column은 데이터 표시용이 아니라 구조(제목) 정의용
 - 셀 안의 바인딩은 상대경로({모델명>필드명}) → 이미 상위 items가 배열을 잡고 있기 때문
+
+- controller.js 파일일
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel"
+], (Controller, JSONModel) => {
+    "use strict";
+
+    return Controller.extend("ycl2project06.controller.Main", {
+        onInit() {
+            let oData = { inputValue: { firstName: "Park", lastName: "Gildong"},
+                          persons : [
+                            { name: "김예원", age: 23, tel: "010-8952-0763"},
+                            { name: "김형동", age: 10, tel: "010-1234-0763"},
+                            { name: "박근철", age: 23, tel: "010-6379-6174"}
+                          ]
+                        };
+            let oModel = new JSONModel(oData);
+            this.getView().setModel(oModel, "local");
+        },
+    });
+});
+```
+</br>
+
+
+- view.xml 파일
 ```html
 <Table items="{local>/persons}">
     <columns>
@@ -202,6 +230,8 @@ onInit() {
 - `rows="{모델명>/경로}"` → 배열 전체를 바인딩 (반복 구조 생성됨)
 - `<t:Column>`은 데이터 표시용이 아니라 구조(제목) 정의용
 - `<t:template>` 안의 바인딩은 상대경로 (`{모델명>필드명}`) → 이미 상위 `rows`가 배열을 잡고 있기 때문
+
+- view.xml 파일
 ```html
 <t:Table rows="{local>/persons}">
     <t:columns>
