Update 웹 UI 프레임워크 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -177,8 +177,9 @@ onInit() {
 - `items="{모델명>/경로}"` → 배열 전체를 바인딩 (반복 구조 생성됨)
 - Column은 데이터 표시용이 아니라 구조(제목) 정의용
 - 셀 안의 바인딩은 상대경로({모델명>필드명}) → 이미 상위 items가 배열을 잡고 있기 때문
+</br>
 
-- controller.js 파일일
+- controller.js 파일
 ```java
 sap.ui.define([
     "sap/ui/core/mvc/Controller",
