--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -81,6 +81,7 @@ onInit: function() {
 
 ### 바인딩(Binding)
 - 모델(Model)과 화면(View)을 연결하여 데이터를 자동으로 표시하고 동기화하는 기능
+- 모든 객체의 키 이름이 동일해야만 바인딩이 제대로 작동
 </br>
 
 ### 바인딩 방식(mode)
