--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -333,4 +333,71 @@ onInit: function() {
 ```
 </br>
 
-### < 실습 >
+### SAPUI5 Dialog Fragment 모델 바인딩 예제 
+- DataChange.fragment.xml 파일
+```html
+<Dialog id="idDialog" title="First Dialog">
+    <content>
+        <Text text="팝업 띄우기 완료!" />
+        <SimpleForm>
+            <Label text="First Name" /><Input value="{dialog>/inputValue1}" />
+            <Label text="Last Name" /><Input value="{dialog>/inputValue2}" />
+            <Label text="Input Value" /><Input value="{dialog>/inputValue3}" />
+        </SimpleForm>
+    </content>
+    <buttons>
+        <Button text="OK" press=".onDialogOKPress" />
+        <Button text="Close" press=".onClose" />
+    </buttons>
+</Dialog>
+```
+</br>
+
+- Main.controller.js 파일
+```html
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel",
+    "sap/ui/core/Fragment"
+], (Controller, JSONModel, Fragment) => {
+    "use strict";
+
+    return Controller.extend("ycl2project07.controller.Main", {
+        onInit() {
+            // View 모델
+            this.getView().setModel(new JSONModel({
+                name: { firstName: "Hong", lastName: "Gildong" },
+                inpvalue: "hihi"
+            }));
+
+            // Dialog 모델
+            this.getView().setModel(new JSONModel({
+                inputValue1: "1",
+                inputValue2: "2",
+                inputValue3: "3"
+            }), "dialog");
+        },
+
+        onPress() {
+            let oDialog = sap.ui.getCore().byId("idDialog");
+
+            if(oDialog) {
+                oDialog.open();
+            } else {
+                Fragment.load({
+                    name: "ycl2project07.view.fragment.DataChange",
+                    type: "XML",
+                    controller: this
+                }).then(dialog => {
+                    dialog.setModel(this.getView().getModel("dialog"), "dialog");
+                    dialog.open();
+                });
+            }
+        },
+
+        onClose() {
+            sap.ui.getCore().byId("idDialog").close();
+        }
+    });
+});
+```
