Update 웹 UI 프레임워크 활용한 개발 1-1(10.27).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -354,7 +354,7 @@ onInit: function() {
 </br>
 
 - Main.controller.js 파일
-```html
+```java
 sap.ui.define([
     "sap/ui/core/mvc/Controller",
     "sap/ui/model/json/JSONModel",
