Update 웹 UI 프레임워크 활용한 개발 1-1(10.27).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -334,6 +334,11 @@ onInit: function() {
 </br>
 
 ### SAPUI5 Dialog Fragment 모델 바인딩 예제 
+- onInit에서 "dialog"라는 이름으로 JSONModel 생성
+- Fragment를 열 때 onPress에서 기존 "dialog" 모델을 Fragment에 연결
+- 이렇게 해야 Fragment 안의 바인딩({dialog>/inputValue1} 등)이 정상 작동
+</br>
+
 - DataChange.fragment.xml 파일
 ```html
 <Dialog id="idDialog" title="First Dialog">
