Update 웹 UI 프레임워크 활용한 개발 1-1(10.27).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -387,7 +387,7 @@ sap.ui.define([
                     name: "ycl2project07.view.fragment.DataChange",
                     type: "XML",
                     controller: this
-                }).then(dialog => {
+                }).then(function(dialog) {
                     dialog.setModel(this.getView().getModel("dialog"), "dialog");
                     dialog.open();
                 });
