Update 웹 UI 프레임워크 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -301,32 +301,42 @@ sap.ui.define([
 
     return Controller.extend("ycl2project07.controller.Main", {
         onInit() {
-            // Dialog 모델
+            let oData = {
+                name : {
+                    firstName : "Hong",
+                    lastName : "Gildong"
+                },
+                inpvalue : "hihi"
+            };
+            let oModel = new JSONModel(oData);
+            this.getView().setModel(oModel);
+
             this.getView().setModel(new JSONModel({
                 inputValue1: "1",
                 inputValue2: "2",
                 inputValue3: "3"
             }), "dialog");
         },
-
         onPress() {
+            let oModel = this.getView().getModel("dialog");
+
             let oDialog = sap.ui.getCore().byId("idDialog");
 
             if(oDialog) {
                 oDialog.open();
-            } else {
+            }
+            else {
                 Fragment.load({
                     name: "ycl2project07.view.fragment.DataChange",
                     type: "XML",
                     controller: this
-                }).then(function(dialog) {
-                    dialog.setModel(this.getView().getModel("dialog"), "dialog");
-                    dialog.open();
-                });
+                }).then(function(inputDiolog) {
+                    inputDiolog.setModel(oModel, "dialog");
+                    inputDiolog.open();
+                })
             }
         },
-
-        onClose() {
+        onClose: function() {
             sap.ui.getCore().byId("idDialog").close();
         }
     });
