Update 웹 UI 프레임워크 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -2,7 +2,7 @@
 ### SAPUI5 Model 정리
 - Model: 데이터를 관리해주는 역할
 - 클라이언트(Client) 모델
-  - 종류: JSON, XML, Resource
+  - 종류: JSON, XML, Resource(i18n: 다국어처리)
   - 특징: 프로젝트 내부에서만 사용, 서버 요청 없음 → 바로 화면에 사용 가능 (데이터가 이미 로컬에 있음)
 - 서버(Server) 모델
   - 종류: OData V2, OData V4
