Update 웹 UI 프레임워크를 활용한 개발 1-2(10.29).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.29).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.29).md
@@ -1,1 +1,11 @@
 # 10/29 기록
+### getData()
+- 모델이 가지고 있는 전체 데이터를 JavaScript 객체 형태로 가져오는 함수
+```java
+oModel.getData();
+```
+```java
+let oModel = this.getView().getModel("local");
+let oData = oModel.getData();
+console.log(oData);
+```
