--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.29).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.29).md
@@ -9,3 +9,19 @@ let oModel = this.getView().getModel("local");
 let oData = oModel.getData();
 console.log(oData);
 ```
+</br>
+
+### getProperty(path)
+- 모델 안의 특정 경로(`path`)에 있는 데이터만 가져옴
+```java
+oModel.getProperty("/경로");
+```
+```java
+let firstName = oModel.getProperty("/name/firstName");
+console.log(firstName); // "Hong"
+```
+</br>
+
+### setData(data, merge)
+
+### setProperty(path, value)
