Update 웹 UI 프레임워크를 활용한 개발 1-2(10.29).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.29).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.29).md
@@ -23,5 +23,26 @@ console.log(firstName); // "Hong"
 </br>
 
 ### setData(data, merge)
+- 모델의 데이터를 전체 교체하거나, 기존 데이터와 병합
+- 병합여부 → true면 기존 데이터 유지하면서 합침. false면 전체 교체 (기본값)
+```java
+oModel.setData(새로운데이터객체, 병합여부);
+```
+```java
+oModel.setData({
+    name: { firstName: "Kim", lastName: "Yuna" },
+    inpValue: "NewValue"
+}, true);
+```
+</br>
 
 ### setProperty(path, value)
+- 모델 안의 특정 경로(`path`)에 있는 데이터만 부분 변경
+```java
+oModel.setProperty("/경로", 변경할값);
+```
+```java
+oModel.setProperty("/name/firstName", "Park");
+oModel.setProperty("/inpValue", "Hello!");
+```
+</br>
