Update 웹 UI 프레임워크를 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.28).md
@@ -9,20 +9,23 @@
   - 특징: 서버와 통신, 서버에 요청 필요 → 서버 응답 받아 화면에 사용
 </br>
 
-### SAPUI5 JSONModel 사용 정리
-- `getModel`
-  - View 또는 컨트롤러에서 등록된 모델을 가져오는 함수
-  - 가져온 모델 객체를 통해 데이터 조회/수정 가능
+### getModel(name)
+- 해당 컨트롤(View, Dialog 등)에 연결된 모델을 가져옴
 ```java
-var oModel = View.getModel(sName)
+컨트롤.getModel("모델이름");
+```
+```java
+let oDialogModel = sap.ui.getCore().byId("idDialog").getModel("dialog");
 ```
 </br>
 
-- `setModel`
-  - 모델을 View 또는 컨트롤러에 연결하는 역할
-  - 연결된 모델은 화면(UI) 요소와 바인딩 가능
+### setModel(model, name)
+- 컨트롤(예: View, Dialog, Fragment)에 모델을 연결함
 ```java
-View.setModel(oModel, sName)
+컨트롤.setModel(모델객체, "모델이름");
+```
+```java
+mDialog.setModel(oModel, "dialog");
 ```
 </br>
 
