Update 웹 UI 프레임워크를 활용한 개발 1-2(10.29).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.29).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.29).md
@@ -25,6 +25,7 @@ console.log(firstName); // "Hong"
 ### setData(data, merge)
 - 모델의 데이터를 전체 교체하거나, 기존 데이터와 병합
 - 병합여부 → true면 기존 데이터 유지하면서 합침. false면 전체 교체 (기본값)
+- true일 때 새로 전달한 속성이 기존 데이터에 있으면 덮어쓰고, 새로 전달한 속성이 없으면 기존 값 그대로 유지
 ```java
 oModel.setData(새로운데이터객체, 병합여부);
 ```
