Update 웹 UI 프레임워크를 활용한 개발 1-2(10.29).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.29).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.29).md
@@ -47,3 +47,16 @@ oModel.setProperty("/name/firstName", "Park");
 oModel.setProperty("/inpValue", "Hello!");
 ```
 </br>
+
+- 아래는 같은 기능을 하는 코드
+```java
+oModel.setProperty("/name/firstName", oModel.getProperty("/dialogFirstName"));
+oModel.setProperty("/name/lastName", oModel.getProperty("/dialogLastName"));
+oModel.setProperty("/inpValue", oModel.getProperty("/dialogInputValue"));
+
+let allDatas = oModel.getData();
+allDatas.name.firstName = allDatas.dialogFirstName;
+allDatas.name.lastName = allDatas.dialogLastName;
+allDatas.inpValue = allDatas.dialogInputValue;
+oModel.setData(allDatas, true);
+```
