Update 웹 UI 프레임워크를 활용한 개발 1-1(10.23).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-1(10.23).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-1(10.23).md
@@ -8,6 +8,18 @@
 * https://<host>:<port>/sap/public/bc/ui5_ui5/index.html
 </br>
 
+### 템플릿 리터럴
+- 기존의 "Hello " + name + "!" 대신 사용
+- 백틱(``)으로 문자열 감싸고, ${} 안에 변수나 표현식 삽입
+```java
+let name = "Hong";
+let age = 25;
+
+console.log(`안녕하세요, ${name}님! 나이는 ${age}살입니다.`);
+// 출력: 안녕하세요, Hong님! 나이는 25살입니다.
+```
+</br>
+
 ### UI5 종류
 - SAPUI5 : SAP 내부 시스템 전용 (SAP BTP 등에서 사용)
 - OpenUI5 : 오픈소스 버전 (무료로 사용 가능)
