--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.28).md
@@ -190,7 +190,8 @@ onInit() {
 ```java
 sap.ui.define([
     "sap/ui/core/mvc/Controller",
-    "sap/ui/model/json/JSONModel"
+    "sap/ui/model/json/JSONModel",
+    "sap/m/Table"
 ], (Controller, JSONModel) => {
     "use strict";
 
