--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.29).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.29).md
@@ -61,3 +61,136 @@ allDatas.name.lastName = allDatas.dialogLastName;
 allDatas.inpValue = allDatas.dialogInputValue;
 oModel.setData(allDatas, true);
 ```
+</br>
+
+### < 실습 1 >
+- 계산기 : 계산한 내역을 모델에 추가하여 table에서 조회함
+</br>
+
+- controller.js 파일
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel",
+    "sap/m/MessageBox"
+], (Controller, JSONModel, MessageBox) => {
+    "use strict";
+
+    return Controller.extend("ycl2project082.controller.Main", {
+        onInit() {
+        let oData = { 
+                calcDatas : [ 
+                    { key : "PLUS", text : "+"},
+                    { key : "MINUS", text : "-"},
+                    { key : "MULTIPL", text : "*"},
+                    { key : "DIVIDE", text : "/"}
+                ],
+                total_result : []
+            };
+            let oModel = new JSONModel(oData);
+            this.getView().setModel(oModel, "select");
+        },
+        onCalc: function() {
+            let oModel = this.getView().getModel("select");
+            let Number1 = Number(this.byId("idNumber1").getValue());
+            let Number2 = Number(this.byId("idNumber2").getValue());
+
+            let oSelect = this.byId("idselect").getSelectedItem().getKey();
+            let result;
+
+            if(oSelect === "PLUS") {
+                oSelect="+";
+                result = Number1+Number2;
+            }
+            else if(oSelect === "MINUS") {
+                oSelect="-";
+                result = Number1-Number2;
+            }
+            else if(oSelect == "MULTIPL") {
+                oSelect="*";
+                result = Number1*Number2;
+            }
+            else if(oSelect === "DIVIDE") {
+                oSelect="/";
+                result = Number1/Number2;
+            }
+
+            let total_result = oModel.getProperty("/total_result");
+            total_result.push({
+                number1: Number1,
+                number2: Number2,
+                key: oSelect,
+                result: result
+            });
+            oModel.setProperty("/total_result", total_result);
+            MessageBox.show(`계산 결과는 ${result} 입니다!`);
+        }
+    });
+});
+```
+</br>
+
+- view.xml 파일
+```html
+<mvc:View controllerName="ycl2project083.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:core="sap.ui.core"
+    xmlns:t="sap.ui.table"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <Input id="idNumber1" width="100%" />
+            <Select 
+                id="idselect" 
+                items="{select>/calcDatas}"
+                width="100%" 
+                showSecondaryValues="true">
+                <core:ListItem 
+                    key="{select>key}" 
+                    text="{select>text}" 
+                    additionalText="{select>key}"/>
+            </Select>
+            <Input id="idNumber2" width="100%" />
+            <Button text="계산하기" press="onCalc"
+                    width="100%" type="Emphasized" />
+
+            <t:Table rows="{select>/total_result}">
+                <t:columns>
+                    <t:Column>
+                        <Label text="Number1" />
+                        <t:template>
+                            <Text text="{select>number1}" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="key" />
+                        <t:template>
+                            <Text text="{select>key}" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="Number2" />
+                        <t:template>
+                            <Text text="{select>number2}" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="=" />
+                        <t:template>
+                            <Text text="=" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="Result" />
+                        <t:template>
+                            <Text text="{select>result}" />
+                        </t:template>
+                    </t:Column>
+                </t:columns>
+            </t:Table>
+    </Page>
+</mvc:View>
+```
