--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -1,1 +1,10 @@
 # 10/30 기록
+### Element Binding
+- UI 요소를 모델의 특정 데이터(객체)에 연결
+
+### Context
+- 바인딩 시 자동 생성되는 객체로 모델 정보, 데이터 경로, 현재 인덱스 등을 가짐
+- 리스트 구조(List, Table)에서 각 항목마다 개별 context 생성
+</br>
+
+### Element Binding
