Update 웹 UI 프레임워크를 활용한 개발 1-2(10.30).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -7,4 +7,51 @@
 - 리스트 구조(List, Table)에서 각 항목마다 개별 context 생성
 </br>
 
-### Element Binding
+### JSONModel.loadData
+- 외부 JSON 파일을 모델에 불러와 데이터로 채우는 함수
+```java
+oModel.loadData("파일 경로");
+```
+```java
+let oModel = new JSONModel();
+oModel.loadData(sap.ui.require.toUrl("ycl2project082/model/data.json"));
+this.getView().setModel(oModel, "main");
+```
+</br>
+
+### Element Binding (`bindElement`)
+- 컨테이너(VBox 등)에 모델 객체를 연결해, 자식 컨트롤이 해당 객체를 기준으로 데이터를 참조하게 함
+- JS 함수 형식
+```java
+control.bindElement({
+    path: "모델 경로",
+    model: "모델 이름"
+});
+```
+</br>
+
+- 이름 없는 기본 모델
+
+- 이름 있는 모델
+- controller.js 파일
+```java
+onInit() {
+            let oModel = new JSONModel();
+            oModel.loadData(sap.ui.require.toUrl("ycl2project082/model/data.json"));
+            this.getView().setModel(oModel, "main");
+
+            this.byId("idVBox").bindElement({
+                path : "/company",
+                model : "main"
+            });
+}
+```
+-
+```html
+<VBox id="idVBox" class="sapUiSmallMargin">
+    <Text text="VBox안에 데이터 : {main>name}" />
+    <Text text="VBox안에 데이터 : {main>street}" />
+    <Text text="VBox안에 데이터 : {main>city}" />
+    <Text text="VBox안에 데이터 : {main>state}" />
+</VBox>
+```
