Update 웹 UI 프레임워크를 활용한 개발 1-2(10.30).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -30,7 +30,35 @@ control.bindElement({
 ```
 </br>
 
+### 직접 경로 바인딩 (bindElement 불필요한 경우)
+- bindElement 필요 없음
+```html
+<Text binding="{/company}" text="{state}" />
+```
+</br>
+
+### 컨텍스트 바인딩 (bindElement 필요한 경우)
 - 이름 없는 기본 모델
+- controller.js 파일
+```java
+onInit() {
+            let oModel = new JSONModel();
+            oModel.loadData(sap.ui.require.toUrl("ycl2project082/model/data.json"));
+            this.getView().setModel(oModel);
+
+            this.byId("idVBox").bindElement("/company");
+}
+```
+- view.xml 파일
+```html
+<VBox id="idVBox" class="sapUiSmallMargin">
+    <Text text="VBox안에 데이터 : {main>name}" />
+    <Text text="VBox안에 데이터 : {main>street}" />
+    <Text text="VBox안에 데이터 : {main>city}" />
+    <Text text="VBox안에 데이터 : {main>state}" />
+</VBox>
+```
+</br>
 
 - 이름 있는 모델
 - controller.js 파일
@@ -46,7 +74,7 @@ onInit() {
             });
 }
 ```
--
+- view.xml 파일
 ```html
 <VBox id="idVBox" class="sapUiSmallMargin">
     <Text text="VBox안에 데이터 : {main>name}" />
