--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -38,7 +38,8 @@ control.bindElement({
 </br>
 
 ### 컨텍스트 바인딩 (bindElement 필요한 경우)
-- 여러 속성을 바인딩할 때 사용용
+- 여러 속성을 바인딩할 때 사용
+  
 - 이름 없는 기본 모델
 - controller.js 파일
 ```java
