--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -87,3 +87,14 @@ onInit() {
     <Text text="VBox안에 데이터 : {main>state}" />
 </VBox>
 ```
+</br>
+
+### Table Row 선택 이벤트 (selectionChange)
+- `sap.m.Table`에서 사용자가 행(Row)을 선택할 때 실행되는 이벤트
+```java
+onSelectionChange: function(oEvent) {
+    // 이벤트 처리 로직
+}
+```
+- `oEvent.getSource()` → 이벤트를 발생시킨 테이블 객체
+- `oEvent.getParameters()` → 선택된 행 데이터, 인덱스 등 파라미터 정보
