Update 웹 UI 프레임워크를 활용한 개발 1-2(10.30).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -88,13 +88,31 @@ onInit() {
 </VBox>
 ```
 </br>
+</br>
 
-### Table Row 선택 이벤트 (selectionChange)
+### onSelectionChange
 - `sap.m.Table`에서 사용자가 행(Row)을 선택할 때 실행되는 이벤트
 ```java
 onSelectionChange: function(oEvent) {
     // 이벤트 처리 로직
 }
 ```
+</br>
+
+### getSource()
+- 이벤트를 발생시킨 컨트롤 객체를 반환
+```java
+let oTable = oEvent.getSource(); // 클릭한 테이블 객체
+```
+</br>
+
 - `oEvent.getSource()` → 이벤트를 발생시킨 테이블 객체
 - `oEvent.getParameters()` → 선택된 행 데이터, 인덱스 등 파라미터 정보
+```java
+onSelectionChange: function(oEvent) {
+    let oBindingContext = oEvent.getParameters().listItem.getBindingContext("customer");
+    this.byId("idBookings").setBindingContext(oBindingContext, "customer");
+}
+```
+</br>
+
