Update 웹 UI 프레임워크를 활용한 개발 1-2(10.30).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -106,13 +106,36 @@ let oTable = oEvent.getSource(); // 클릭한 테이블 객체
 ```
 </br>
 
-- `oEvent.getSource()` → 이벤트를 발생시킨 테이블 객체
-- `oEvent.getParameters()` → 선택된 행 데이터, 인덱스 등 파라미터 정보
+### getParameters()
+- 이벤트 객체에 담긴 파라미터 정보 반환. Row 선택 이벤트에서는 선택된 항목, 인덱스 등이 포함됨.
 ```java
-onSelectionChange: function(oEvent) {
-    let oBindingContext = oEvent.getParameters().listItem.getBindingContext("customer");
-    this.byId("idBookings").setBindingContext(oBindingContext, "customer");
-}
+let oParams = oEvent.getParameters();
+let oSelectedItem = oParams.listItem; // 선택된 Row
 ```
 </br>
 
+### getBindingContext()
+- 컨트롤 또는 Row가 참조하는 모델과 경로를 반환
+```java
+let oBindingContext = oSelectedItem.getBindingContext("customer");
+```
+</br>
+
+### setBindingContext()
+- 컨트롤에 특정 모델의 컨텍스트를 바인딩. 다른 테이블, Form 등에서 데이터 표시할 때 사용
+```java
+this.byId("idBookings").setBindingContext(oBindingContext, "customer");
+```
+
+```java
+onSelectionChange: function(oEvent) {
+    // 이벤트 함수는 이벤트 객체가 파라미터로 들어온다
+    // 이벤트 객체는 이벤트마다 다르다
+    // .getSource : 이벤트를 일으킨 객체
+    // .getParameters : 이벤트에 들어있는 파라미터 정보 (요게 다름)
+    let oBindingContext = oEvent.getParameters().listItem.getBindingContext("customer");
+    let sPath = oBindingContext.getPath();  // 현재 선택한 Item의 모델 경로
+
+    this.byId("idBookings").setBindingContext(oBindingContext, "customer");
+}
+```
