Update 웹 UI 프레임워크를 활용한 개발 1-2(10.30).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -126,6 +126,13 @@ let oBindingContext = oSelectedItem.getBindingContext("customer");
 ```java
 this.byId("idBookings").setBindingContext(oBindingContext, "customer");
 ```
+</br>
+
+### getPath()
+- 바인딩 컨텍스트(BindingContext)가 참조하는 모델 내 경로(Path)를 반환
+```java
+let sPath = oBindingContext.getPath();
+```
 
 ```java
 onSelectionChange: function(oEvent) {
