Update 웹 UI 프레임워크를 활용한 개발 1-2(10.30).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -124,6 +124,9 @@ let oBindingContext = oSelectedItem.getBindingContext("customer");
 ### setBindingContext()
 - 컨트롤에 특정 모델의 컨텍스트를 바인딩. 다른 테이블, Form 등에서 데이터 표시할 때 사용
 ```java
+oControl.setBindingContext(oBindingContext, "모델명")/;
+```
+```java
 this.byId("idBookings").setBindingContext(oBindingContext, "customer");
 ```
 </br>
@@ -133,6 +136,7 @@ this.byId("idBookings").setBindingContext(oBindingContext, "customer");
 ```java
 let sPath = oBindingContext.getPath();
 ```
+</br>
 
 ```java
 onSelectionChange: function(oEvent) {
@@ -145,4 +149,26 @@ onSelectionChange: function(oEvent) {
 
     this.byId("idBookings").setBindingContext(oBindingContext, "customer");
 }
+```
+</br>
+
+### formatter (포매터 함수)
+- 바인딩 값이 화면에 표시되기 전에 데이터를 변환할 때 사용
+```java
+<Text text="{path: '모델명>속성', formatter: '.포매터함수명'}" />
+```
+- controller.js 파일
+```java
+fnFormatter: function(sValue) {
+    if (sValue >= 20) return "성인";
+    else if (sValue >= 14) return "청소년";
+    else return "어린이";
+}
+```
+- view.xml 파일
+```java
+<Text text="{
+    path: 'customer>Age',
+    formatter: '.fnFormatter'
+}" />
 ```
