--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -138,6 +138,8 @@ let sPath = oBindingContext.getPath();
 ```
 </br>
 
+- 사용자가 sap.m.Table에서 행(Row)을 클릭했을 때 자동으로 호출되는 이벤트 함수
+- 고객을 선택하면 그 고객의 _Bookings 데이터가 아래 테이블에 자동 표시됨
 ```java
 onSelectionChange: function(oEvent) {
     // 이벤트 함수는 이벤트 객체가 파라미터로 들어온다
