Update 웹 UI 프레임워크를 활용한 개발 1-2(10.30).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -162,9 +162,19 @@ onSelectionChange: function(oEvent) {
 - controller.js 파일
 ```java
 fnFormatter: function(sValue) {
-    if (sValue >= 20) return "성인";
-    else if (sValue >= 14) return "청소년";
-    else return "어린이";
+    let result;
+    // formatter 사용시 if문으로 value가 있는 경우를 체크하여
+    // 처리하는게 좋다. value 값만 들어오는게 아니기 때문
+    if(sValue) {    
+        let oModel = this.getView().getModel("customer");
+
+        if(sValue >= 20) result = "성인";
+        else if(sValue >= 17 && sValue < 19) result = "중학생";
+        else if(sValue >= 14 && sValue < 17) result = "초등학생";
+        else if(sValue >= 8 && sValue < 14) result = "초등학생";
+        else result = "아동";
+        return result;
+    }
 }
 ```
 - view.xml 파일
