--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -33,7 +33,10 @@ control.bindElement({
 ### 직접 경로 바인딩 (bindElement 불필요한 경우)
 - bindElement 필요 없음
 ```html
-<Text binding="{/company}" text="{state}" />
+<Text binding="{/company}" text="{state}" />    // 모델명 x
+```
+```html
+<Text text="{main>/company/state}" />           // 모델명 o
 ```
 </br>
 
