Update 웹 UI 프레임워크를 활용한 개발 1-2(10.30).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -58,10 +58,10 @@ onInit() {
 - view.xml 파일
 ```html
 <VBox id="idVBox" class="sapUiSmallMargin">
-    <Text text="VBox안에 데이터 : {main>name}" />
-    <Text text="VBox안에 데이터 : {main>street}" />
-    <Text text="VBox안에 데이터 : {main>city}" />
-    <Text text="VBox안에 데이터 : {main>state}" />
+    <Text text="VBox안에 데이터 : {name}" />
+    <Text text="VBox안에 데이터 : {street}" />
+    <Text text="VBox안에 데이터 : {city}" />
+    <Text text="VBox안에 데이터 : {state}" />
 </VBox>
 ```
 </br>
