Update 웹 UI 프레임워크를 활용한 개발 1-2(10.30).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -179,9 +179,9 @@ fnFormatter: function(sValue) {
         let oModel = this.getView().getModel("customer");
 
         if(sValue >= 20) result = "성인";
-        else if(sValue >= 17 && sValue < 19) result = "중학생";
-        else if(sValue >= 14 && sValue < 17) result = "초등학생";
-        else if(sValue >= 8 && sValue < 14) result = "초등학생";
+        else if(sValue >= 17) result = "중학생";
+        else if(sValue >= 14) result = "초등학생";
+        else if(sValue >= 8) result = "초등학생";
         else result = "아동";
         return result;
     }
