Update 웹 UI 프레임워크를 활용한 개발 1-2(10.30).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -1,4 +1,73 @@
 # 10/30 기록
+### 1) Property Binding (속성 바인딩)
+- 컨트롤의 단일 속성을 모델 값에 연결. 모델 값이 변경되면 UI 속성도 자동 업데이트.
+```html
+<Text text="{모델명>경로}" />
+
+<Text text="{customer>/CustomerName}" />
+<Text text="{main>/state}" />
+```
+</br>
+
+### 2) Aggregation Binding (집합 바인딩)
+- 컨트롤의 자식 집합(aggregation)에 모델 데이터를 연결. 주로 리스트, 테이블, VBox 등 반복되는 UI 생성에 사용.
+```html
+<Table items="{모델명>경로}">
+    <columns>...</columns>
+    <items>
+        <ColumnListItem>
+            <cells>
+                <Text text="{모델명>속성}" />
+            </cells>
+        </ColumnListItem>
+    </items>
+</Table>
+
+<Table id="idCustomers" items="{customer>/Customers}">
+    <columns>
+        <Column><Text text="이름" /></Column>
+        <Column><Text text="나이" /></Column>
+    </columns>
+    <items>
+        <ColumnListItem>
+            <cells>
+                <Text text="{customer>CustomerName}" />
+                <Text text="{customer>Age}" />
+            </cells>
+        </ColumnListItem>
+    </items>
+</Table>
+```
+</br>
+
+### 3) Element Binding (바인딩 컨텍스트)
+- 컨트롤 전체(Element)를 특정 모델 경로에 바인딩. 하위 속성들은 상대 경로로 접근 가능.
+```java
+this.byId("idVBox").bindElement({
+    path: "/company",
+    model: "main"
+});
+```
+```html
+<VBox id="idVBox" class="sapUiSmallMargin">
+    <Text text="{main>name}" />
+    <Text text="{main>city}" />
+</VBox>
+```
+</br>
+
+### 4) Expression Binding (표현식 바인딩)
+- 단순 바인딩이 아니라, 모델 데이터를 기반으로 계산/조건 처리 후 UI 속성에 반영.
+```html
+<Text text="{= ${모델명>속성} > 18 ? '성인' : '청소년'}" />
+
+<Text text="{= ${customer>Age} >= 20 ? '성인' 
+                  : ${customer>Age} >= 14 ? '청소년' 
+                  : '어린이' }" />
+```
+</br>
+</br>
+
 ### Element Binding
 - UI 요소를 모델의 특정 데이터(객체)에 연결
 
