Update 웹 UI 프레임워크를 활용한 개발 1-2(10.30).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -256,3 +256,18 @@ fnFormatter: function(sValue) {
     }
 }
 ```
+</br>
+
+### < 실습 1 >
+```java
+onPress: function(oEvent) {
+    let oRow = oEvent.getSource().getParent();
+    let oBindingContext = oRow.getBindingContext("customer");
+    let sPath = oBindingContext.getPath();
+
+    let oModel = this.getView().getModel("customer");
+    let oData = oModel.getProperty(sPath);
+    let phone_num = oData.PhoneNumber;
+    sap.m.MessageToast.show(phone_num);
+}
+```
