--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -2,7 +2,7 @@
 ### 1) Property Binding (속성 바인딩)
 - 컨트롤의 단일 속성을 모델 값에 연결. 모델 값이 변경되면 UI 속성도 자동 업데이트.
 ```html
-<Text text="{모델명>경로}" />
+<Text text="{모델명>/경로}" />
 
 <Text text="{customer>/CustomerName}" />
 <Text text="{main>/state}" />
@@ -11,6 +11,7 @@
 
 ### 2) Aggregation Binding (집합 바인딩)
 - 컨트롤의 자식 집합(aggregation)에 모델 데이터를 연결. 주로 리스트, 테이블, VBox 등 반복되는 UI 생성에 사용.
+- Table, list 등 반복적인 객체 출력 용도 사용시
 ```html
 <Table items="{모델명>경로}">
     <columns>...</columns>
@@ -42,6 +43,7 @@
 
 ### 3) Element Binding (바인딩 컨텍스트)
 - 컨트롤 전체(Element)를 특정 모델 경로에 바인딩. 하위 속성들은 상대 경로로 접근 가능.
+- 특정 control에 특정 경로 데이터를 상대 바인딩 시킬 수 있게 하기 위함.
 ```java
 this.byId("idVBox").bindElement({
     path: "/company",
@@ -58,6 +60,7 @@ this.byId("idVBox").bindElement({
 
 ### 4) Expression Binding (표현식 바인딩)
 - 단순 바인딩이 아니라, 모델 데이터를 기반으로 계산/조건 처리 후 UI 속성에 반영.
+- view에 바인딩 시 간단한 로직처리 가능
 ```html
 <Text text="{= ${모델명>속성} > 18 ? '성인' : '청소년'}" />
 
