--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -62,6 +62,8 @@ this.byId("idVBox").bindElement({
 - 단순 바인딩이 아니라, 모델 데이터를 기반으로 계산/조건 처리 후 UI 속성에 반영.
 - view에 바인딩 시 간단한 로직처리 가능
 ```html
+{= ${model>/arr} >= 100}
+
 <Text text="{= ${모델명>속성} > 18 ? '성인' : '청소년'}" />
 
 <Text text="{= ${customer>Age} >= 20 ? '성인' 
