Update 웹 UI 프레임워크를 활용한 개발 1-2(10.30).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -61,7 +61,7 @@ this.byId("idVBox").bindElement({
 ### 4) Expression Binding (표현식 바인딩)
 - 단순 바인딩이 아니라, 모델 데이터를 기반으로 계산/조건 처리 후 UI 속성에 반영.
 - view에 바인딩 시 간단한 로직처리 가능
-- 꺽새 '<'는 &lt; 그리고 '&'는 &amp;
+- 꺽새 '<'는 &lt; 그리고 '&&'는 &amp;&amp;
 ```html
 {= ${model>/arr} >= 100}
 
