Update 웹 UI 프레임워크를 활용한 개발 1-2(10.30).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -234,6 +234,8 @@ onSelectionChange: function(oEvent) {
 
 ### formatter (포매터 함수)
 - 바인딩 값이 화면에 표시되기 전에 데이터를 변환할 때 사용
+- 파라미터 값이 있을 때만 처리(if(sValue) {})
+- 파라미터에 undefined 이런 애들도 들어오기 때문
 ```java
 <Text text="{path: '모델명>속성', formatter: '.포매터함수명'}" />
 ```
