Update 웹 UI 프레임워크를 활용한 개발 1-2(10.31).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
@@ -1,1 +1,16 @@
 # 10/31 기록
+### getSelectedItem()
+- 리스트나 테이블에서 현재 선택된 항목을 가져오는 메서드
+```java
+onReadBooking: function(oEvent) {
+      let table = this.byId("idCustomers2");  // this.byId 사용해서 Customers 테이블 가져오기
+      let oRow = table.getSelectedItem();     // 현재 선택한 아이템 정보 들어옴   
+
+      let oBindingContext = oRow.getBindingContext("customer");
+      let sPath = oBindingContext.getPath();
+      let oCustomer = this.getView().getModel("customer").getProperty(sPath);
+
+      let oBookingModel = this.getView().getModel("booking");
+      oBookingModel.setProperty("/result", oCustomer._Bookings);
+  }
+```
