Update 웹 UI 프레임워크를 활용한 개발 1-2(10.31).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
@@ -1,4 +1,11 @@
 # 10/31 기록
+### this.byId()
+- View에 정의된 컨트롤을 ID로 찾아서 반환
+```java
+let oTable = this.byId("idCustomers2");
+oTable.addItem(new sap.m.ColumnListItem()); // 테이블에 행 추가 가능
+```
+
 ### getSelectedItem()
 - 리스트나 테이블에서 현재 선택된 항목을 가져오는 메서드
 ```java
