Update 웹 UI 프레임워크를 활용한 개발 1-2(10.31).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
@@ -21,3 +21,6 @@ onReadBooking: function(oEvent) {
       oBookingModel.setProperty("/result", oCustomer._Bookings);
   }
 ```
+
+oEvent.getParameter("value")
+this.byId("idCustomers2")
