Update 웹 UI 프레임워크를 활용한 개발 1-2(10.31).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
@@ -24,3 +24,25 @@ onReadBooking: function(oEvent) {
 
 oEvent.getParameter("value")
 this.byId("idCustomers2")
+</br>
+
+### oEvent.getParameter("value") 와 this.byId("idSomething")
+- view.xml 파일
+```html
+<Input id="idInput" placeholder="이름 입력" change=".onInputChange" />
+<Button text="이름 읽기 (byId)" press=".onReadInputValue" />
+```
+- controller.js 파일
+```java
+onInputChange: function (oEvent) {
+    // 👉 방법 ① 이벤트로부터 값 가져오기
+    let sValue = oEvent.getParameter("value");
+    console.log("이벤트 방식:", sValue);
+},
+
+onReadInputValue: function () {
+    // 👉 방법 ② 컨트롤 직접 접근해서 값 가져오기
+    let sValue = this.byId("idInput").getValue();
+    console.log("byId 방식:", sValue);
+}
+```
