--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
@@ -9,6 +9,26 @@ oTable.addItem(new sap.m.ColumnListItem()); // 테이블에 행 추가 가능
 ### getSelectedItem()
 - 리스트나 테이블에서 현재 선택된 항목을 가져오는 메서드
 ```java
+let oRow = oTable.getSelectedItem();
+if (!oRow) {
+    sap.m.MessageToast.show("선택된 고객이 없습니다.");
+    return;
+}
+```
+</br>
+
+### getBindingContext()
+- 해당 아이템(oRow)이 바인딩된 모델의 컨텍스트(Context) 를 반환합니다.
+- Context는 모델 내에서 이 행이 참조하는 경로(Path) 를 포함하고 있습
+```java
+let oBindingContext = oRow.getBindingContext("customer");
+// 예: sPath = "/Customers/3"
+let sPath = oBindingContext.getPath();
+```
+</br>
+
+### < 예제 1 >
+```java
 onReadBooking: function(oEvent) {
       let table = this.byId("idCustomers2");  // this.byId 사용해서 Customers 테이블 가져오기
       let oRow = table.getSelectedItem();     // 현재 선택한 아이템 정보 들어옴   
@@ -19,10 +39,8 @@ onReadBooking: function(oEvent) {
 
       let oBookingModel = this.getView().getModel("booking");
       oBookingModel.setProperty("/result", oCustomer._Bookings);
-  }
+}
 ```
-
-
 </br>
 
 ### oEvent.getParameter("value") 와 this.byId("idSomething")
