Update 웹 UI 프레임워크를 활용한 개발 1-2(10.31).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
@@ -1,4 +1,11 @@
 # 10/31 기록
+node_modules 삭제
+
+터미널 경로를 해당 프로젝트 경로로 맞춰주기
+cd 이용
+npm install
+실행
+
 ### this.byId()
 - View에 정의된 컨트롤을 ID로 찾아서 반환
 ```java
