--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
@@ -1,10 +1,10 @@
 # 10/31 기록
-node_modules 삭제
-
-터미널 경로를 해당 프로젝트 경로로 맞춰주기
-cd 이용
-npm install
-실행
+### node_modules 삭제 후 다시 실행
+- 터미널 경로를 해당 프로젝트 경로로 맞춰주기
+- cd 이용
+- npm install
+- 실행
+</br>
 
 ### this.byId()
 - View에 정의된 컨트롤을 ID로 찾아서 반환
@@ -12,6 +12,7 @@ npm install
 let oTable = this.byId("idCustomers2");
 oTable.addItem(new sap.m.ColumnListItem()); // 테이블에 행 추가 가능
 ```
+</br>
 
 ### getSelectedItem()
 - 리스트나 테이블에서 현재 선택된 항목을 가져오는 메서드
