Update 웹 UI 프레임워크를 활용한 개발 1-2(10.31).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
@@ -71,3 +71,8 @@ onReadInputValue: function () {
     console.log("byId 방식:", sValue);
 }
 ```
+</br>
+
+
+- 전역모델
+<img width="521" height="322" alt="image" src="https://github.com/user-attachments/assets/9c232c0e-eca7-4dac-9a7b-e30c8d8132f4" />
