Update 웹 UI 프레임워크를 활용한 개발 1-2(10.31).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
@@ -76,3 +76,14 @@ onReadInputValue: function () {
 
 - 전역모델
 <img width="521" height="322" alt="image" src="https://github.com/user-attachments/assets/9c232c0e-eca7-4dac-9a7b-e30c8d8132f4" />
+
+
+
+items="{
+                        path : '/Products',
+                        filters : [{
+                            path : 'ProductName',
+                            operator : 'EQ',
+                            value1 : 'Tofu'
+                        }]
+                    }"
