Update 웹 UI 프레임워크를 활용한 개발 1-2(10.31).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
@@ -79,7 +79,24 @@ onReadInputValue: function () {
 </br>
 </br>
 
+- EntitySet = 전체 컬렉션
+- Entity = 한 건의 데이터
+- Complex Type (a) = Entity 안의 객체 필드
+- EntityType 속성 = 객체 안의 실제 값
+```
+EntitySet      → 전체 배열 (전체 데이터 세트)
+ └ Entity      → 배열 안의 하나의 레코드
+     └ a       → 객체(Complex Type)
+         └ Field → EntityType 속성 (실제 값)
+```
+```java
+let entities = this.getView().getModel("model").getProperty("/EntitySet"); // 배열
+let entity = entities[0];      // 첫 번째 Entity
+let a = entity.a;              // Complex Type
+let fieldValue = a.Field;      // 속성 값
+```
 
+</br>
 items="{
                         path : '/Products',
                         filters : [{
