Update 웹 UI 프레임워크를 활용한 개발 1-2(10.31).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
@@ -96,13 +96,141 @@ let entity = entities[0];      // 첫 번째 Entity
 let a = entity.a;              // Complex Type
 let fieldValue = a.Field;      // 속성 값
 ```
-
 </br>
+
+### filters
+- 테이블이나 리스트의 데이터 중 조건에 맞는 항목만 표시
+- 조건은 FilterOperator로 지정
+- EQ는 같다, NE는 다르다, GT는 보다 크다, GE는 크거나 같다, LT는 보다 작다, LE는 작거나 같다, BT는 두 값 사이, Contains는 문자열 포함
+</br>
+
+- controller.js 파일
+```java
+new Filter(
+    sPath,               // 필드 이름 (예: "ProductName")
+    sOperator,           // 연산자 (FilterOperator.EQ, Contains 등)
+    vValue1,             // 값1
+    vValue2 (옵션)       // 값2 (BT 사용 시)
+)
+```
+```java
+let aFilters = [
+    new Filter("ProductName", FilterOperator.Contains, "Queso"),
+    new Filter({
+        path: "UnitsInStock",
+        operator: FilterOperator.BT,
+        value1: 10,
+        value2: 100
+    })
+];
+```
+</br>
+
+- view.xml 파일
+```html
 items="{
-                        path : '/Products',
-                        filters : [{
-                            path : 'ProductName',
-                            operator : 'EQ',
-                            value1 : 'Tofu'
-                        }]
-                    }"
+    path: '<모델명>><EntitySet>',
+    filters: [
+        { path: '<필드명>', operator: '<연산자>', value1: '<값>', value2: '<값2(옵션)>' },
+        ...
+    ]
+}"
+```
+```html
+<Table id="idProductsTable" items="{
+    path: 'product>/Products',
+    filters: [
+        { path: 'ProductName', operator: 'Contains', value1: 'Queso' },
+        { path: 'UnitsInStock', operator: 'BT', value1: 10, value2: 100 }
+    ]
+}">
+    <columns>
+        <Column><Text text="Product Name"/></Column>
+        <Column><Text text="Units In Stock"/></Column>
+    </columns>
+    <items>
+        <ColumnListItem>
+            <cells>
+                <Text text="{product>ProductName}"/>
+                <Text text="{product>UnitsInStock}"/>
+            </cells>
+        </ColumnListItem>
+    </items>
+</Table>
+```
+</br>
+</br>
+
+### sorter
+- 테이블이나 리스트의 데이터를 특정 필드를 기준으로 정렬
+- true → 내림차순(descending), false → 오름차순(ascending)
+</br>
+
+- controller.js 파일
+```java
+new Sorter(
+    sPath,        // 정렬할 필드 이름 (예: "SupplierID")
+    bDescending   // true: 내림차순, false: 오름차순
+)
+```
+```java
+let aSorters = [
+    new Sorter("SupplierID", true),   // SupplierID 내림차순
+    new Sorter("UnitsInStock", false) // UnitsInStock 오름차순
+];
+
+// 테이블에 적용
+let table = this.byId("idProductsTable");
+table.getBinding("items").sort(aSorters);
+```
+</br>
+
+- view.xml 파일
+```html
+<Table
+    id="idProductsTable"
+    items="{
+        path: '<모델명>><EntitySet>',
+        sorter: [
+            { path: '<필드명1>', descending: true/false },
+            { path: '<필드명2>', descending: true/false }
+        ]
+    }"
+>
+    <columns>
+        <Column><Text text="컬럼1"/></Column>
+        <Column><Text text="컬럼2"/></Column>
+    </columns>
+
+    <items>
+        <ColumnListItem>
+            <cells>
+                <Text text="{<모델명>><필드명1>}"/>
+                <Text text="{<모델명>><필드명2>}"/>
+            </cells>
+        </ColumnListItem>
+    </items>
+</Table>
+```
+```html
+<Table id="idProductsTable" items="{
+    path: 'product>/Products',
+    sorter: [
+        { path: 'SupplierID', descending: true },
+        { path: 'UnitsInStock', descending: false }
+    ]
+}">
+    <columns>
+        <Column><Text text="Supplier ID"/></Column>
+        <Column><Text text="Units In Stock"/></Column>
+    </columns>
+    <items>
+        <ColumnListItem>
+            <cells>
+                <Text text="{product>SupplierID}"/>
+                <Text text="{product>UnitsInStock}"/>
+            </cells>
+        </ColumnListItem>
+    </items>
+</Table>
+```
