--- a/HTML_Javascript/실습1.md
+++ b/HTML_Javascript/실습1.md
@@ -1,5 +1,9 @@
 ### 실습 1 : 입력창의 값을 버튼 클릭 시 아래 텍스트에 표시하는 SAPUI5 기본 이벤트 처리 실습
 </br>
+<img width="426" height="216" alt="image" src="https://github.com/user-attachments/assets/52829eec-7190-4fa0-88e7-bebeb3fdb3df" />
+</br>
+</br>
+</br>
 
 - View1.view.xml
 ```html
