--- a/HTML_Javascript/실습 2.md
+++ b/HTML_Javascript/실습 2.md
@@ -5,3 +5,8 @@
 
 <img width="188" height="173" alt="image" src="https://github.com/user-attachments/assets/7946b852-0794-48b6-b8ff-3b9553f89931" />
 
+</br>
+</br>
+</br>
+
+- Practice.view.xml 파일
