--- a/HTML_Javascript/실습 2.md
+++ b/HTML_Javascript/실습 2.md
@@ -9,4 +9,54 @@
 </br>
 </br>
 
-- Practice.view.xml 파일
+- Practice.view.xml
+```html
+<mvc:View controllerName="ycl2project02.controller.Practice"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <content>
+            <VBox id="vbox">
+                <CheckBox id="idCheckBox1" text="option 1" selected="true"/>
+                <CheckBox id="idCheckBox2" text="option 2" selected="false"/>
+                <Button id="idButton" text="Button" press="onClick"/>
+                <Text id="idText"/>
+            </VBox>
+        </content>
+    </Page>
+</mvc:View>
+```
+</br>
+
+- Practice.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller"
+], (Controller) => {
+    "use strict";
+
+    return Controller.extend("ycl2project02.controller.Practice", {
+        onInit() {
+        },
+        onClick: function() {
+            let checkbox1 = this.getView().byId("idCheckBox1");
+            let checkbox2 = this.getView().byId("idCheckBox2");
+            let textbox1 = checkbox1.getText();
+            let textbox2 = checkbox2.getText();
+            let selectbox1 = checkbox1.getSelected();
+            let selectbox2 = checkbox2.getSelected();
+            let oText = this.getView().byId("idText");
+
+            if(selectbox1 && selectbox2) {
+                oText.setText(textbox1+textbox2);
+            }
+            else if(selectbox1) {
+                oText.setText(textbox1);
+            }
+            else if(selectbox2) {
+                oText.setText(textbox2);
+            }
+        }
+    });
+});
+```
