--- a/HTML_Javascript/실습 3.md
+++ b/HTML_Javascript/실습 3.md
@@ -1,1 +1,6 @@
+### SAPUI5 레이아웃 및 폼 구성 실습
+- Panel + Toolbar + SimpleForm(ColumnLayout)으로 Supplier 정보 입력 폼을 구현하고, 확장/접기 가능한 패널 UI 레이아웃 구성을 실습함
 
+<img width="1887" height="728" alt="image" src="https://github.com/user-attachments/assets/4137b90c-1d0a-4a83-be19-6e3e59fdf3f8" />
+
+<img width="1919" height="865" alt="image" src="https://github.com/user-attachments/assets/baf8ce8e-ee5d-4220-be48-12a2c33ec529" />
